Update spoon formatting